cmake_minimum_required(VERSION 3.5)
project(algot1_msgs)

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

if(ROS2)
  find_package(ament_cmake )
  if (ament_cmake_FOUND)
      message(STATUS "ROS *2* version found, building ROS2")
      include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ROS2.cmake)
  else()
      message(FATAL_ERROR ${PROJECT_NAME}": No ROS2 versions found")
  endif()
else()  #(ROS1)
  find_package(catkin QUIET COMPONENTS roscpp rosbag sensor_msgs cv_bridge)
  if (catkin_FOUND)
      message(STATUS "ROS *1* version found, building ROS1")
      include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ROS1.cmake)
  else()
      message(FATAL_ERROR ${PROJECT_NAME}": No ROS1 versions found")
  endif()
endif()
